# MeBo-Binary-Logfile-Converter

./: CMakeLists.txt  Converter.h  Main.qml
src/: CMakeLists.txt  Converter.h  Main.qml  main.cpp  resources.qrc
